REGRESSION(r141136): Apple's internal PLT test suite doesn't finish https://bugs.webkit.org/show_bug.cgi?id=108380

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Re-enable the main resource cache since the regression had been fixed in r141615.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestResource):

LayoutTests:

Re-enable tests that have been temporarily disabled.

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/127277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142024 268f45cc-cd09-0410-ab3c-d52691b4dbfc